--- a/TimC2225 github.html
+++ b/TimC2225 github.html
@@ -7,7 +7,9 @@
     <body>
       <h1>Testing testing 1</h1>
       <h6>Testing 2</h6>
-      <p>This is my second webpage.</p>
-      <img src = "Trigun Wallpaper.jpg" width = 10/>
+      <p>This is my second <br /> webpage.</p>
+      <hr />
+      <img src = "Trigun Wallpaper.jpg" width = 500/>
+
     </body>
   </html>
