--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     </head>
   
     <body>
-      <div id="main">
-        <h1>Testing testing 1</h1>
-        <h6>Testing 2</h6>
-        <br />
-        <p>This is my second <br /> webpage.</p>
-        <hr />
-        <img src = "Trigun Wallpaper.jpg" width = 500/>
+      <div id="container">
+        <div id="main">
+          <h1>Testing testing 1</h1>
+          <h6>Testing 2</h6>
+          <br />
+          <p>This is my second <br /> webpage.</p>
+          <hr />
+          <img src = "Trigun Wallpaper.jpg" width = 500/>
+        </div>
       </div>
     </body>
   </html>
