--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <br />
           <p>This is my second <br /> webpage.</p>
           <hr />
-          <img src = "Trigun Wallpaper.jpg" width = 500/>
+          <img src = "Images/Trigun Wallpaper.jpg" width = 500/>
         </div>
       </div>
     </body>
