--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
                     <ul>
                         <li><a class="selected" href="">Home</a></li>
                         <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
+                        <li><a href="">Assignments</a></li>
+                        <li><a href="">Final Project</a></li>
                     </ul>
                 </div>
                 <div id="main">
