--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
     <body>
         <div id="container">
             <div id="header">
-                <h1>My Website</h1>
+                <h1 id="Name">My Website</h1>
                 <link rel="stylesheet" type="text/css" href="style.css">
+                <div id="nav">
+                  <ul>
+                      <li><a class="selected" href="">Home</a></li>
+                      <li><a href="">About</a></li>
+                      <li><a href="">Assignments</a></li>
+                      <li><a href="">Final Project</a></li>
+                  </ul>
+              </div>
             </div> 
             <div id="content">
-                <div id="nav">
-                    <h2>Navigation</h2>
-                    <ul>
-                        <li><a class="selected" href="">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Assignments</a></li>
-                        <li><a href="">Final Project</a></li>
-                    </ul>
-                </div>
                 <div id="main">
                     <h2>Home Page</h2>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, inventore odio vero sapiente, aliquam dolorem vel hic error beatae. Est beatae similique itaque a perspiciatis delectus ab adipisci harum odio!</p>
@@ -26,7 +25,7 @@
                 </div>
             </div>
             <div id="footer">
-                Copyright &copy; 2020 
+                Copyright &copy; 2023 
             </div>
         </div>
     </body>
