--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <div id="nav">
                   <ul>
                       <li><a class="selected" href="">Home</a></li>
-                      <li><a href="">About</a></li>
+                      <li><a href="about.html">About</a></li>
                       <li><a href="">Assignments</a></li>
                       <li><a href="">Final Project</a></li>
                   </ul>
