--- a/about.html
+++ b/about.html
@@ -8,12 +8,12 @@
               <h1 id="Name">My Website</h1>
               <link rel="stylesheet" type="text/css" href="style.css">
               <div id="nav">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a class="selected" href="">About</a></li>
-                    <li><a href="">Assignments</a></li>
+                <div class="flex-container">
                     <li><a href="">Final Project</a></li>
-                </ul>
+                    <li><a href="">Assignments</a></li>
+                    <li><a class="selected" href="">About</a></li>
+                    <li><a href="index.html">Home</a></li>
+                </div>
             </div>
           </div> 
           <div id="content">
