--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <body>
         <div id="container">
             <div id="header">
-                <h1 id="Name">My Website</h1>
-                <link rel="stylesheet" type="text/css" href="style.css">
-                <div id="nav">
-                  <ul>
-                      <li><a class="selected" href="">Home</a></li>
-                      <li><a href="about.html">About</a></li>
-                      <li><a href="">Assignments</a></li>
-                      <li><a href="">Final Project</a></li>
-                  </ul>
+              <h1 id="Name">My Website</h1>
+              <link rel="stylesheet" type="text/css" href="style.css">
+              <div id="nav">
+                <div class="flex-container">
+                  <li><a href="">Final Project</a></li>
+                  <li><a href="">Assignments</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a class="selected" href="">Home</a></li>
+                </div>
               </div>
             </div> 
             <div id="content">
-                <div id="main">
-                    <h2>Home Page</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, inventore odio vero sapiente, aliquam dolorem vel hic error beatae. Est beatae similique itaque a perspiciatis delectus ab adipisci harum odio!</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea odit, possimus, reprehenderit mollitia inventore doloremque fuga sed, officia dignissimos quidem autem nulla rem, accusamus! Impedit blanditiis necessitatibus voluptate sed eos.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut deleniti ullam maiores cum nisi nulla mollitia dolorem distinctio doloribus ad voluptatum, adipisci numquam soluta exercitationem explicabo harum reiciendis hic laudantium.</p>
-                </div>
+              <div id="main">
+                <h2>Home Page</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, inventore odio vero sapiente, aliquam dolorem vel hic error beatae. Est beatae similique itaque a perspiciatis delectus ab adipisci harum odio!</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea odit, possimus, reprehenderit mollitia inventore doloremque fuga sed, officia dignissimos quidem autem nulla rem, accusamus! Impedit blanditiis necessitatibus voluptate sed eos.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut deleniti ullam maiores cum nisi nulla mollitia dolorem distinctio doloribus ad voluptatum, adipisci numquam soluta exercitationem explicabo harum reiciendis hic laudantium.</p>
+              </div>
             </div>
             <div id="footer">
                 Copyright &copy; 2023 
