--- a/Assignments/Placeholder assignment.html
+++ b/Assignments/Placeholder assignment.html
@@ -1,29 +1,33 @@
 <html>
   <head>
-      <title>About Me</title>
+      <title>Assignments</title>
   </head>
   <body>
       <div id="container">
           <div id="header">
               <h1 id="Name">My Website</h1>
-              <link rel="stylesheet" type="text/css" href="style.css">
+              <link rel="stylesheet" type="text/css" href="../style.css">
               <div id="nav">
                 <div class="flex-container">
                   <li><a href="">Final Project</a></li>
-                  <li><a href="Assignments/Placeholder assignment.html">Assignments</a></li>
-                  <li><a class="selected" href="">About</a></li>
-                  <li><a href="index.html">Home</a></li>
+                  <li><a href="">Assignments</a></li>
+                  <li><a href="../about.html">About</a></li>
+                  <li><a href="../index.html">Home</a></li>
                 </div>
             </div>
           </div> 
           <div id="content">
-              <div id="about">
-                  <h2>About Me</h2>
+              <div id="Assignment">
+                <div id="title">
+                  <h2>Assignment ...</h2>
+                </div>
+                <div id="writeup">
                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, inventore odio vero sapiente, aliquam dolorem vel hic error beatae. Est beatae similique itaque a perspiciatis delectus ab adipisci harum odio!</p>
                   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea odit, possimus, reprehenderit mollitia inventore doloremque fuga sed, officia dignissimos quidem autem nulla rem, accusamus! Impedit blanditiis necessitatibus voluptate sed eos.</p>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut deleniti ullam maiores cum nisi nulla mollitia dolorem distinctio doloribus ad voluptatum, adipisci numquam soluta exercitationem explicabo harum reiciendis hic laudantium.</p>
+                </div>
               </div>
-              <img id="selfie" src="Images/Trigun Wallpaper.jpg">
+              <img id="selfie" src="">
           </div>
           <div id="footer">
               Copyright &copy; 2023 
