--- a/final project.html
+++ b/final project.html
@@ -1,33 +1,29 @@
 <html>
   <head>
-      <title>Assignment ...</title>
+      <title>Final Project</title>
   </head>
   <body>
       <div id="container">
           <div id="header">
               <h1 id="Name">My Website</h1>
-              <link rel="stylesheet" type="text/css" href="../style.css">
+              <link rel="stylesheet" type="text/css" href="style.css">
               <div id="nav">
                 <div class="flex-container">
-                  <li><a href="../final project.html">Final Project</a></li>
-                  <li><a href="../assignments page.html">Assignments</a></li>
-                  <li><a href="../about.html">About</a></li>
-                  <li><a href="../index.html">Home</a></li>
+                  <li><a class="selected" href="">Final Project</a></li>
+                  <li><a href="assignments page.html">Assignments</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="index.html">Home</a></li>
                 </div>
             </div>
           </div> 
           <div id="content">
-              <div id="Assignment">
-                <div id="title">
-                  <h2>Assignment ...</h2>
-                </div>
-                <div id="writeup">
+              <div id="Final">
+                  <h2>Final Project: ...</h2>
                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, inventore odio vero sapiente, aliquam dolorem vel hic error beatae. Est beatae similique itaque a perspiciatis delectus ab adipisci harum odio!</p>
                   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea odit, possimus, reprehenderit mollitia inventore doloremque fuga sed, officia dignissimos quidem autem nulla rem, accusamus! Impedit blanditiis necessitatibus voluptate sed eos.</p>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut deleniti ullam maiores cum nisi nulla mollitia dolorem distinctio doloribus ad voluptatum, adipisci numquam soluta exercitationem explicabo harum reiciendis hic laudantium.</p>
-                </div>
               </div>
-              <img id="selfie" src="">
+              <img id="selfie" src="Images/Trigun Wallpaper.jpg">
           </div>
           <div id="footer">
               Copyright &copy; 2023 
