--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
               <link rel="stylesheet" type="text/css" href="style.css">
               <div id="nav">
                 <div class="flex-container">
-                  <li><a href="">Final Project</a></li>
-                  <li><a href="Assignments/Placeholder assignment.html">Assignments</a></li>
+                  <li><a href="final project.html">Final Project</a></li>
+                  <li><a href="assignments page.html">Assignments</a></li>
                   <li><a href="about.html">About</a></li>
                   <li><a class="selected" href="">Home</a></li>
                 </div>
