--- a/Assignments/Placeholder assignment.html
+++ b/Assignments/Placeholder assignment.html
@@ -18,7 +18,7 @@
           </div> 
           <div id="content">
               <div id="Assignment">
-                <div id="title">
+                <div id="title2">
                   <h2>Assignment ...</h2>
                 </div>
                 <div id="writeup">
