--- a/assignments page.html
+++ b/assignments page.html
@@ -18,13 +18,13 @@
           </div> 
           <div id="content">
               <div id="Assignment">
-                <div id="title">
+                <div id="title1">
                   <h2>Assignments:</h2>
                 </div>
                 <div id="Assignment_list">
                   <div class="flex-container">
-                    <p><a href="">Assignment 1</a></p>
-                    <p><a href="">Assignment 2</a></p>
+                    <p><a href="Assignments/Assignment 1.html">Assignment 1 - GitHub and Html Creation</a></p>
+                    <p><a href="">Assignment 2 - 2D and 3D CAD</a></p>
                     <p><a href="">Assignment 3</a></p>
                     <p><a href="Assignments/Placeholder assignment.html">Assignment ...</a></p>
                   </div>
