--- a/Assignments/Assignment 1.html
+++ b/Assignments/Assignment 1.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-      <title>Assignment 1</title>
+      <title>Assignment 1 & 2</title>
   </head>
   <body>
       <div id="container">
@@ -19,22 +19,27 @@
           <div id="content">
               <div id="Assignment">
                 <div id="title2">
-                  <h2>Assignment 1 - GitHub and Html Creation</h2>
+                  <h2>Assignment 1 & 2 - GitHub and Html Creation</h2>
                 </div>
                 <div id="GitHub">
                   <h3>GitHub Creation:</h3>
-                  <iframe id="A1V1" src="https://www.youtube.com/embed/M5mg0r4ajt4"></iframe> 
+                  <iframe id="AV1" src="https://www.youtube.com/embed/M5mg0r4ajt4"></iframe> 
                   <div id="GitHubV">
-                    <p>test</p>
+                    <p>For assignment 1, we created a GitHub repository to host our project website. We followed the video on the left, by:</p>
+                    <li>Creating a GitHub account</li>
+                    <li>Creating a repository</li>
+                    <li>Downloading and linking GitHub desktop to the repository</li>
+                    <li></li>
+                    <li><a href="https://github.com/TimC2225/TimC2225.github.io">Final GitHub link</a></li>
                   </div>
                 </div>
                 <hr>
                 <div id="HtmlCss">
                   <div id="HtmlCssV">
                     <h3>HTML and CSS:</h3>
-                    <iframe id="A1V2" src="https://www.youtube.com/embed/bWPMSSsVdPk"></iframe> 
+                    <iframe id="AV2" src="https://www.youtube.com/embed/bWPMSSsVdPk"></iframe> 
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea odit, possimus, reprehenderit mollitia inventore doloremque fuga sed, officia dignissimos quidem autem nulla rem, accusamus! Impedit blanditiis necessitatibus voluptate sed eos.</p>
-                    <iframe id="A1V3" src="https://www.youtube.com/embed/0afZj1G0BIE"></iframe> 
+                    <iframe id="AV3" src="https://www.youtube.com/embed/0afZj1G0BIE"></iframe> 
                     <p id="Css">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut deleniti ullam maiores cum nisi nulla mollitia dolorem distinctio doloribus ad voluptatum, adipisci numquam soluta exercitationem explicabo harum reiciendis hic laudantium.</p>
                   </div>
                 </div>
