--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea odit, possimus, reprehenderit mollitia inventore doloremque fuga sed, officia dignissimos quidem autem nulla rem, accusamus! Impedit blanditiis necessitatibus voluptate sed eos.</p>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut deleniti ullam maiores cum nisi nulla mollitia dolorem distinctio doloribus ad voluptatum, adipisci numquam soluta exercitationem explicabo harum reiciendis hic laudantium.</p>
               </div>
-              <img id="selfie" src="Images/Selfie.jpg">
+              <img id="selfie" src="Images/IMG_20210125_144149.png">
           </div>
           <div id="footer">
               Copyright &copy; 2023 
