--- a/assignments page.html
+++ b/assignments page.html
@@ -24,7 +24,7 @@
                 <div id="Assignment_list">
                   <div class="flex-container">
                     <p><a href="Assignments/Assignment 1.html">Assignment 1 - GitHub and Html Creation</a></p>
-                    <p><a href="">Assignment 2 - 2D and 3D CAD</a></p>
+                    <p><a href="Assignments/Assignment 2.html">Assignment 2 - 2D and 3D CAD</a></p>
                     <p><a href="">Assignment 3</a></p>
                     <p><a href="Assignments/Placeholder assignment.html">Assignment ...</a></p>
                   </div>
