--- a/Assignments/Assignment 1.html
+++ b/Assignments/Assignment 1.html
@@ -27,10 +27,10 @@
                   <div id="GitHubV">
                     <p>For assignment 1, we created a GitHub repository to host our project website. We followed the video on the left, by:</p>
                     <li>Creating a GitHub account</li>
-                    <li>Creating a repository</li>
+                    <li>Creating a repository for the website</li>
                     <li>Downloading and linking GitHub desktop to the repository</li>
-                    <li></li>
-                    <li><a href="https://github.com/TimC2225/TimC2225.github.io">Final GitHub link</a></li>
+                    <li>Adding HTML files for the various pages of the website</li>
+                    <li>Resulting in the <a href="https://github.com/TimC2225/TimC2225.github.io">final GitHub link.</a></li>
                   </div>
                 </div>
                 <hr>
@@ -38,9 +38,14 @@
                   <div id="HtmlCssV">
                     <h3>HTML and CSS:</h3>
                     <iframe id="AV2" src="https://www.youtube.com/embed/bWPMSSsVdPk"></iframe> 
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea odit, possimus, reprehenderit mollitia inventore doloremque fuga sed, officia dignissimos quidem autem nulla rem, accusamus! Impedit blanditiis necessitatibus voluptate sed eos.</p>
+                    <p>For the first potion of assignment 2, we first started by watching the video on the right. Through this video, we learned how to set up a basic HTML-based website, specifically learning how to insert a title, headers, paragraphs, breaks, lines, and images.</p>
                     <iframe id="AV3" src="https://www.youtube.com/embed/0afZj1G0BIE"></iframe> 
-                    <p id="Css">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut deleniti ullam maiores cum nisi nulla mollitia dolorem distinctio doloribus ad voluptatum, adipisci numquam soluta exercitationem explicabo harum reiciendis hic laudantium.</p>
+                    <p id="Css">For the second portion of assignment 2, we continued by watching the video on the left. Through this video, we learned how to plan out a design for a website and use CSS to make the website more aesthetically pleasing and easy to navigate.</p>
+                    <p id="Css">In particular, we learned how to change the colour of backgrounds, text, and other containers, learned how to add padding and margins to different components of the website, and learned how to change the dimensions of the components of the website among other functions.</p>
+                    <hr>
+                    <h3>Other Resources:</h3>
+                    <img id="A1P" src="../Images/Assignment 2 Home.png">
+                    <p id="OtherR">Apart from these videos, I also used resources from the web to help build my website. For example, I used YouTube videos and websites like w3schools.com to learn how to insert compenets like embedded Youtube videos and GIFs, alongside learning how to make the website scalable, resulting in the current website as of completing assignment 2:</p>
                   </div>
                 </div>
               </div>
