--- a/assignments page.html
+++ b/assignments page.html
@@ -23,8 +23,8 @@
                 </div>
                 <div id="Assignment_list">
                   <div class="flex-container">
-                    <p><a href="Assignments/Assignment 1.html">Assignment 1 - GitHub and Html Creation</a></p>
-                    <p><a href="Assignments/Assignment 2.html">Assignment 2 - 2D and 3D CAD</a></p>
+                    <p><a href="Assignments/Assignment 1.html">Assignment 1 and 2 - GitHub and Html Creation</a></p>
+                    <p><a href="Assignments/Assignment 3.html">Assignment 3 - 2D and 3D CAD</a></p>
                     <p><a href="">Assignment 3</a></p>
                     <p><a href="Assignments/Placeholder assignment.html">Assignment ...</a></p>
                   </div>
