--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
             </div> 
             <div id="content">
               <div id="main">
-                <h2>Home Page</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, inventore odio vero sapiente, aliquam dolorem vel hic error beatae. Est beatae similique itaque a perspiciatis delectus ab adipisci harum odio!</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea odit, possimus, reprehenderit mollitia inventore doloremque fuga sed, officia dignissimos quidem autem nulla rem, accusamus! Impedit blanditiis necessitatibus voluptate sed eos.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut deleniti ullam maiores cum nisi nulla mollitia dolorem distinctio doloribus ad voluptatum, adipisci numquam soluta exercitationem explicabo harum reiciendis hic laudantium.</p>
+                <h1>Hello, Welcome to my website.</h1>
+                <h2>I am Timothy Choo Yern Weng, from class DEEE/FT/2A/04</h2>
+                <p>This website contains some information about me, and covers the documentation of the assignments and final project undertaken throughout the EP1000 module.</p>              
               </div>
             </div>
             <div id="footer">
