About and Home Final, Assignment 3 v2

--- a/Assignments/Assignment 1.html
+++ b/Assignments/Assignment 1.html
@@ -41,15 +41,14 @@
                     <p>For the first potion of assignment 2, we first started by watching the video on the right. Through this video, we learned how to set up a basic HTML-based website, specifically learning how to insert a title, headers, paragraphs, breaks, lines, and images.</p>
                     <iframe id="AV3" src="https://www.youtube.com/embed/0afZj1G0BIE"></iframe> 
                     <p id="Css">For the second portion of assignment 2, we continued by watching the video on the left. Through this video, we learned how to plan out a design for a website and use CSS to make the website more aesthetically pleasing and easy to navigate.</p>
-                    <p id="Css">In particular, we learned how to change the colour of backgrounds, text, and other containers, learned how to add padding and margins to different components of the website, and learned how to change the dimensions of the components of the website among other functions.</p>
+                    <p id="Css">In particular, we learned how to change the colour of backgrounds, text, and other containers, learned how to add padding and margins to different components of the website, learned how to use float to shift the various compenents of the website to the left or right of the screen, and learned how to change the dimensions of the components of the website among other functions.</p>
                     <hr>
                     <h3>Other Resources:</h3>
                     <img id="A1P" src="../Images/Assignment 2 Home.png">
-                    <p id="OtherR">Apart from these videos, I also used resources from the web to help build my website. For example, I used YouTube videos and websites like w3schools.com to learn how to insert compenets like embedded Youtube videos and GIFs, alongside learning how to make the website scalable, resulting in the current website as of completing assignment 2:</p>
+                    <p id="OtherR">Apart from these videos, I also used resources from the web to help build my website. For example, I used YouTube videos and websites like w3schools.com to learn how to insert compenets like embedded Youtube videos and GIFs, alongside learning how to make the website scalable.<br><br>Everything learnt from these videos has resulted in the current version of the website as of completing assignment 2:</p>
                   </div>
                 </div>
               </div>
-              <img id="A1P" src="">
           </div>
           <div id="footer">
               Copyright &copy; 2023 
