--- a/Assignments/Assignment 3.html
+++ b/Assignments/Assignment 3.html
@@ -25,7 +25,7 @@
                 <h3>2D: Exercise 1</h3>
                 <img id="A3P1" src="../Images/Week 3/Exercise 1/Exercise 1 Part 1.gif">
                 <img id="A3P2" src="../Images/Week 3/Exercise 1/Exercise 1 Part 2.gif">
-                <p id="Cap1"><b>1.</b> In exercise 1, we used GIMP to edit out the background of a selfie. After selecting the photo I would be using for the exercise, I started by using the free select lasso tool to trace the outline of my shirt and left half of my face,</p>
+                <p id="Cap1"><b>1.</b> In exercise 1, we used GIMP to edit out the background of a selfie using Raster Editing. After selecting the photo I would be using for the exercise, I started by using the free select lasso tool to trace the outline of my shirt and left half of my face,</p>
                 <p id="Cap2"><b>2.</b> Then proceeded to trace out the rest of my head and hair,</p>
                 <img id="A3P3" src="../Images/Week 3/Exercise 1/Exercise 1 Part 3.gif">
                 <img id="A3P4" src="../Images/Week 3/Exercise 1/Exercise 1 Part 4.gif">
@@ -33,7 +33,19 @@
                 <p id="Cap2"><b>4.</b> Finally, the smudge tool was used to help make the cropped hair look more natural, thereafter the image was scaled to the desired size and exported as a png to preserve the transparency of the background. The image was then used as part of the "About" portion of this website.</p>
                 <hr>
                 <h3>2D: Exercise 2</h3>
-                
+                <img id="A3P1" src="../Images/Week 3/Exercise 2/Exercise 2 Part 1.gif">
+                <img id="A3P2" src="../Images/Week 3/Exercise 2/Exercise 2 Part 2.gif">
+                <p id="Cap1"><b>1.</b> In exercise 2, we used Inkscape to make a vector-based logo for ourselves using Vector Editting. After selecting the photo I would be using as a base for the logo, I started by changing the opacity of the layer containing the image, before tracing the ouline of the head in the picture with the "Draw Bezier curves and straight lines" tool.</p>
+                <p id="Cap2"><b>2.</b> I then proceeded to trace out the details of the head, leaving out some details to make my logo design more original.</p>
+                <img id="A3P3" src="../Images/Week 3/Exercise 2/Colour Fill.png">
+                <img id="A3P4" src="../Images/Week 3/Exercise 2/Greyscale Fill.png">
+                <p id="Cap1"><b>3.</b> I then used the fill tool to fill various parts of the logo design with colours matching the photo,</p>
+                <p id="Cap2"><b>4.</b> Then changed the filled colours to corresponding shades of grey for the greyscale version.</p>
+              </div>
+              <hr>
+              <div id="ThreeD">
+                <h3>3D: Exercise 1</h3>
+                <iframe src="https://ichat3068.autodesk360.com/shares/public/SH512d4QTec90decfa6e4292cdea04804282?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
               </div>
             </div>
           </div>
