--- a/about.html
+++ b/about.html
@@ -19,9 +19,13 @@
           <div id="content">
               <div id="about">
                   <h2>About Me</h2>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, inventore odio vero sapiente, aliquam dolorem vel hic error beatae. Est beatae similique itaque a perspiciatis delectus ab adipisci harum odio!</p>
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea odit, possimus, reprehenderit mollitia inventore doloremque fuga sed, officia dignissimos quidem autem nulla rem, accusamus! Impedit blanditiis necessitatibus voluptate sed eos.</p>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut deleniti ullam maiores cum nisi nulla mollitia dolorem distinctio doloribus ad voluptatum, adipisci numquam soluta exercitationem explicabo harum reiciendis hic laudantium.</p>
+                  <p>I am Timothy Choo from class DEEE/FT/2A/04.</p>
+                  <p>I am taking this module because I am interested in 3D printing and laser cutting.</p>
+                  <p>My hobbies include:</p>
+                  <li>Building plastic models</li>
+                  <li>Gaming</li>
+                  <li>Planning holidays</li>
+                  <li>etc.</li>
               </div>
               <img id="selfie" src="Images/IMG_20210125_144149_2.png">
           </div>
