Final project placeholder change

--- a/final project.html
+++ b/final project.html
@@ -23,7 +23,7 @@
                   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea odit, possimus, reprehenderit mollitia inventore doloremque fuga sed, officia dignissimos quidem autem nulla rem, accusamus! Impedit blanditiis necessitatibus voluptate sed eos.</p>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut deleniti ullam maiores cum nisi nulla mollitia dolorem distinctio doloribus ad voluptatum, adipisci numquam soluta exercitationem explicabo harum reiciendis hic laudantium.</p>
               </div>
-              <img id="FPP1" src="Images/Trigun Wallpaper.jpg">
+              <img id="FPP1" src="Images/Week 3/Exercise 2/Greyscale Fill v1.png">
           </div>
           <div id="footer">
               Copyright &copy; 2023 
