--- a/Assignments/Assignment 3.html
+++ b/Assignments/Assignment 3.html
@@ -45,7 +45,21 @@
               <hr>
               <div id="ThreeD">
                 <h3>3D: Exercise 1</h3>
-                <iframe src="https://ichat3068.autodesk360.com/shares/public/SH512d4QTec90decfa6e4292cdea04804282?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+                <img id="A3P1" src="../Images/Week 3/CAD Exercise 1/CAD Exercise 1.gif">
+                <iframe id="A3P2" src="https://ichat3068.autodesk360.com/shares/public/SH512d4QTec90decfa6e4292cdea04804282?mode=embed" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+                <p id="Cap1"><b>1.</b> For this and the next exercises, we used Fusion 360 to make a sketch based on the design specifications given to us. For this exercise in particular, we made the outline of the design by creating a rectangle and circle using the 2-point rectangle and 2-point circle tools respectively. Afterward, we created another circle of a smaller diameter inside the original circle, beofre trimming off the excess lines. A rectangle was then added to the bottom of the design with dimensions matching the design specs, before the guide line used was trimmed and the completed sketch was extruded by 15mm.</p>
+                <p id="Cap2"><b>2.</b> This resulted in the above 3D model.</p>
+                <hr>
+                <h3>3D: Exercise 2</h3>
+                <img id="A3P1" src="../Images/Week 3/CAD Exercise 2/CAD Exercise 2 Part 1.gif">
+                <img id="A3P2" src="../Images/Week 3/CAD Exercise 2/CAD Exercise 2 Part 2.gif">
+                <p id="Cap1"><b>1.</b> In exercise 2, we continued using Fusion 360 to construct another sketch. I started by making the outlines of the edges of the design using the circumscribed polygon and center diameter circle tools, before connecting the centres of the two circles using a line.</p>
+                <p id="Cap2"><b>2.</b> I then proceeded to construct the rectangles that connect the two circles using the center rectangle tool, with the curved edges of the inner rectangle being made using the 3-tangent circle and trim tools.</p>
+                <img id="A3P3" src="../Images/Week 3/CAD Exercise 2/CAD Exercise 2 Part 3.gif">
+                <iframe id="A3P4" src="https://ichat3068.autodesk360.com/shares/public/SH512d4QTec90decfa6ec5b63b80fb25fbf4?mode=embed" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+                <p id="Cap1"><b>3.</b> I then used the extrude tool to extrude the completed sketch symmetrically about the x-y plane before cutting off some of the top of the extruded portion on the left by 5mm such that the left and right portions of the model are of the same height above the x-y plane.</p>
+                <p id="Cap2"><b>4.</b> This resulted in the above 3D model.</p>
+
               </div>
             </div>
           </div>
