--- a/assignments page.html
+++ b/assignments page.html
@@ -25,7 +25,7 @@
                   <div class="flex-container">
                     <p><a href="Assignments/Assignment 1.html">Assignment 1 and 2 - GitHub and Html Creation</a></p>
                     <p><a href="Assignments/Assignment 3.html">Assignment 3 - 2D and 3D CAD</a></p>
-                    <p><a href="">Assignment 3</a></p>
+                    <p><a href="Assignments/Assignment 4.html">Assignment 4 - 3D CAD</a></p>
                     <p><a href="Assignments/Placeholder assignment.html">Assignment ...</a></p>
                   </div>
                 </div>
