Assignment 5, 6 added, Assignment 4 v2

--- a/Assignments/Assignment 4.html
+++ b/Assignments/Assignment 4.html
@@ -23,39 +23,40 @@
               </div>
               <div id="TwoD">
                 <h3>Exercise 5</h3>
-                <img id="A3P1" src="../Images/Week 4">
-                <img id="A3P2" src="../Images/Week 4">
-                <p id="Cap1"><b>1.</b> For all of these exercises, we used Fusion 360 to create 3D models based on video guides and design specifications. In exercise 5, </p>
-                <p id="Cap2"><b>2.</b> </p>
-                <img id="A3P3" src="../Images/Week 4">
-                <iframe id="A3P4" src="" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
-                <p id="Cap1"><b>3.</b> </p>
-                <p id="Cap2"><b>4.</b> This resulted in the above 3D model.</p>
+                <img id="A3P1" src="../Images/Week 4/Exercise 5/Exercise 5 Part 1.gif">
+                <img id="A3P2" src="../Images/Week 4/Exercise 5/Exercise 5 Part 2.gif">
+                <p id="Cap1"><b>1.</b> For all of these exercises, we used Fusion 360 to create 3D models based on video guides and design specifications. In exercise 5, we made a toy brick by, firstly, using the sketch tool to make a 31.80mm by 15.80mm rectangle, which was then extruded by 9.60mm to form the basic shape of the brick. We then used the sketch tool to draw a circle on the top of the brick.</p>
+                <p id="Cap2"><b>2.</b> Afterward, we extruded the circles and duplicated using the rectangular pattern tool to create the cylinders on the top of the brick.</p>
+                <img id="A3P3" src="../Images/Week 4/Exercise 5/Exercise 5 Part 3.gif">
+                <iframe id="A3P4" src="https://ichat3068.autodesk360.com/shares/public/SH512d4QTec90decfa6efb74eb93d34df12e?mode=embed" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+                <p id="Cap1"><b>3.</b> Then, we used the shell tool to hollow out the bottom of the brick. From the hollowed out area, we sketched the circles required to make the cylinders in the bottom of the brick, before extruding these circles and using the shell tool to hoollow out the cylinders.</p>
+                <p id="Cap2"><b>4.</b> The top cylinders were then chamfered, resulting in the above 3D model.</p>
                 <hr>
+                
                 <h3>Exercise 6</h3>
-                <img id="A3P1" src="../Images/Week 4">
-                <img id="A3P2" src="../Images/Week 4">
-                <p id="Cap1"><b>1.</b> In exercise 6, we </p>
-                <p id="Cap2"><b>2.</b> I then proceeded to </p>
-                <img id="A3P3" src="../Images/Week 4">
-                <iframe id="A3P4" src="" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
-                <p id="Cap1"><b>3.</b> </p>
+                <img id="A3P1" src="../Images/Week 4/Exercise 6/Exercise 6 Part 1.gif">
+                <img id="A3P2" src="../Images/Week 4/Exercise 6/Exercise 6 Part 2.gif">
+                <p id="Cap1"><b>1.</b> In exercise 6, we made a keychain using Fusion 360. First, I started by creating a rectangular border using the sketch tool to make sure that the dimesnsions of the keychain are within those stated in the design specifications. Second, I made a sketch of the outline of the keychain within the rectangular border by using multiple circle tools, the offset tool, and the line tool.</p>
+                <p id="Cap2"><b>2.</b> Third, I proceeded to use the sketch tool to create the inner rim of the keychain, before using the trim tool to trim away unnecessary lines from the previous sketches overlapping. The sketches so far were then extruded to fit the design specified height.</p>
+                <img id="A3P3" src="../Images/Week 4/Exercise 6/Exercise 6 Part 3.gif">
+                <iframe id="A3P4" src="https://ichat3068.autodesk360.com/shares/public/SH512d4QTec90decfa6e0b4675d5e22a57af?mode=embed" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+                <p id="Cap1"><b>3.</b> Fouth, I added text to the keychain using the text tool, spelling out "Exercise 6", before extruding the text to complete the keychain design.</p>
                 <p id="Cap2"><b>4.</b> This resulted in the above 3D model.</p>
               </div>
               <hr>
               <div id="ThreeD">
                 <h3>Exercise 7</h3>
-                <img id="A3P1" src="../Images/Week 4">
+                <img id="A3P1" src="../Images/Week 4/Exercise 7/">
                 <iframe id="A3P2" src="" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
                 <p id="Cap1"><b>1.</b> For exercise 7, we made the outline of the design by creating a rectangle and circle using the 2-point rectangle and 2-point circle tools respectively. Afterward, we created another circle of a smaller diameter inside the original circle, beofre trimming off the excess lines. A rectangle was then added to the bottom of the design with dimensions matching the design specs, before the guide line used was trimmed and the completed sketch was extruded by 15mm.</p>
                 <p id="Cap2"><b>2.</b> This resulted in the above 3D model.</p>
                 <hr>
                 <h3>Exercise 8</h3>
-                <img id="A3P1" src="../Images/Week 4">
-                <img id="A3P2" src="../Images/Week 4">
+                <img id="A3P1" src="../Images/Week 4/Exercise 8/">
+                <img id="A3P2" src="../Images/Week 4/Exercise 8/">
                 <p id="Cap1"><b>1.</b> For exercise 8, we continued using Fusion 360 to construct another sketch. I started by making the outlines of the edges of the design using the circumscribed polygon and center diameter circle tools, before connecting the centres of the two circles using a line.</p>
                 <p id="Cap2"><b>2.</b> I then proceeded to construct the rectangles that connect the two circles using the center rectangle tool, with the curved edges of the inner rectangle being made using the 3-tangent circle and trim tools.</p>
-                <img id="A3P3" src="../Images/Week 4">
+                <img id="A3P3" src="../Images/Week 4/Exercise 8/"/>
                 <iframe id="A3P4" src="" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
                 <p id="Cap1"><b>3.</b> I then used the extrude tool to extrude the completed sketch symmetrically about the x-y plane before cutting off some of the top of the extruded portion on the left by 5mm such that the left and right portions of the model are of the same height above the x-y plane.</p>
                 <p id="Cap2"><b>4.</b> This resulted in the above 3D model.</p>
