--- a/assignments page.html
+++ b/assignments page.html
@@ -26,6 +26,9 @@
                     <p><a href="Assignments/Assignment 1.html">Assignment 1 and 2 - GitHub and Html Creation</a></p>
                     <p><a href="Assignments/Assignment 3.html">Assignment 3 - 2D and 3D CAD</a></p>
                     <p><a href="Assignments/Assignment 4.html">Assignment 4 - 3D CAD</a></p>
+                    <p><a href="Assignments/Assignment 5.html">Assignment 5 - Laser Cutting</a></p>
+                    <p><a href="Assignments/Assignment 6.html">Assignment 6 - 3D Printing</a></p>
+                    <p><a href="Assignments/Assignment 7.html">Assignment 7 - Arduino</a></p>
                     <p><a href="Assignments/Placeholder assignment.html">Assignment ...</a></p>
                   </div>
                 </div>
