--- a/Assignments/Assignment 4.html
+++ b/Assignments/Assignment 4.html
@@ -46,19 +46,23 @@
               <hr>
               <div id="ThreeD">
                 <h3>Exercise 7</h3>
-                <img id="A3P1" src="../Images/Week 4/Exercise 7/">
-                <iframe id="A3P2" src="" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
-                <p id="Cap1"><b>1.</b> For exercise 7, we made the outline of the design by creating a rectangle and circle using the 2-point rectangle and 2-point circle tools respectively. Afterward, we created another circle of a smaller diameter inside the original circle, beofre trimming off the excess lines. A rectangle was then added to the bottom of the design with dimensions matching the design specs, before the guide line used was trimmed and the completed sketch was extruded by 15mm.</p>
-                <p id="Cap2"><b>2.</b> This resulted in the above 3D model.</p>
+                <img id="A3P1" src="../Images/Week 4/Exercise 7/Exercise 7 Part 1.gif">
+                <img id="A3P2" src="../Images/Week 4/Exercise 7/Exercise 7 Part 2.gif">
+                <p id="Cap1"><b>1.</b> For exercise 7, we made a 3D model of a stack of cubes in Fusion 360. I started by making a model of one of the basic cubes via extruding a sketch of a square, before making copies of said cubes to create the base line of cubes.</p>
+                <p id="Cap2"><b>2.</b> I then proceeded to multiply the cubes and arranged them to make the base of the model.</p>
+                <img id="A3P3" src="../Images/Week 4/Exercise 7/Exercise 7 Part 3.gif">
+                <iframe id="A3P4" src="https://ichat3068.autodesk360.com/shares/public/SH512d4QTec90decfa6eabca9a2792def505?mode=embed" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+                <p id="Cap1"><b>3.</b> More cubes were then copy-pasted to construct the upper levels of the model. The model was then hollowed out from the bottom using the shell tool.</p>
+                <p id="Cap2"><b>4.</b> This resulted in the above 3D model.</p>
                 <hr>
                 <h3>Exercise 8</h3>
-                <img id="A3P1" src="../Images/Week 4/Exercise 8/">
-                <img id="A3P2" src="../Images/Week 4/Exercise 8/">
-                <p id="Cap1"><b>1.</b> For exercise 8, we continued using Fusion 360 to construct another sketch. I started by making the outlines of the edges of the design using the circumscribed polygon and center diameter circle tools, before connecting the centres of the two circles using a line.</p>
-                <p id="Cap2"><b>2.</b> I then proceeded to construct the rectangles that connect the two circles using the center rectangle tool, with the curved edges of the inner rectangle being made using the 3-tangent circle and trim tools.</p>
-                <img id="A3P3" src="../Images/Week 4/Exercise 8/"/>
-                <iframe id="A3P4" src="" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
-                <p id="Cap1"><b>3.</b> I then used the extrude tool to extrude the completed sketch symmetrically about the x-y plane before cutting off some of the top of the extruded portion on the left by 5mm such that the left and right portions of the model are of the same height above the x-y plane.</p>
+                <img id="A3P1" src="../Images/Week 4/Exercise 8/Exercise 8 Part 1.gif">
+                <img id="A3P2" src="../Images/Week 4/Exercise 8/Exercise 8 Part 2.gif">
+                <p id="Cap1"><b>1.</b> For exercise 8, we continued using Fusion 360 to construct a model of a cup. I started by creating a sketch of the base shape of the cup, before extruding it to an appropriate height.</p>
+                <p id="Cap2"><b>2.</b> I then proceeded to create another sketch on the top of the extruded model, before using the extrude tool to cut into the model.</p>
+                <img id="A3P3" src="../Images/Week 4/Exercise 8/Exercise 8 Part 3.gif"/>
+                <iframe id="A3P4" src="https://ichat3068.autodesk360.com/shares/public/SH512d4QTec90decfa6e95c45ea5a181a435?mode=embed" height="45%" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+                <p id="Cap1"><b>3.</b> Finally, I crated a new sketch on the flat side of the cup to make the rectangles necessary for the handle of the cup. The rectangles were then connected by a body to make the handle of the cup, with the handle then being made curved and more comfortable to hold using the fillet tool. </p>
                 <p id="Cap2"><b>4.</b> This resulted in the above 3D model.</p>
 
               </div>
